--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@ const relatime = elapsed => {
 }
 
 const timings = []
+const S = 1000
 const M = 60*1000
 const H = 60*M
 const now = Date.now()
