--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body:after {
   background-repeat: no-repeat;
 }
 
-.boss b, .boss time {
+.boss a, .boss time {
   color: white;
   text-shadow:
    -1px -1px 0 #000,  
@@ -88,8 +88,8 @@ body:after {
 
 .boss time { user-select: none }
 .boss time:before { content: ' ' }
-.boss:hover i, .boss:hover b { display: block }
-.boss b { display: none }
+.boss:hover i, .boss:hover a { display: block }
+.boss a { display: none }
 .boss i {
   font-family: monospace;
   font-size: 1vw;
@@ -125,26 +125,26 @@ body:after {
 </head>
 <body>
   <div id="map">
-    <div class="boss" data-desc="Aux portes de la Citadelle de la Couronne de glace" style="left : 50.22%; top : 88.00%;"><b>Falric</b><i>50.22, 88.00</i><time></div>
-    <div class="boss" data-desc="Au Fléaulme" style="left : 79.86%; top : 60.93%;"><b>Prophète Tharon'ja</b><i>79.86, 60.93</i><time></div>
-    <div class="boss" data-desc="Au Fléaulme" style="left : 77.89%; top : 65.92%;"><b>Novos l'Invocateur</b><i>77.89, 65.92</i><time></div>
-    <div class="boss" data-desc="A la Vallée de l'Espoir perdu" style="left : 58.53%; top : 39.46%;"><b>Trollétripe</b><i>58.53, 39.46</i><time></div>
-    <div class="boss" data-desc="A Mord'rethar : la Porte de la Mort" style="left : 67.48%; top : 58.09%;"><b>Krik'thir le Gardien de la porte</b><i>67.48, 58.09</i><time></div>
-    <div class="boss" data-desc="A la Charognerie" style="left : 29.57%; top : 62.26%;"><b>Prince Taldaram</b><i>29.57, 62.26</i><time></div>
-    <div class="boss" data-desc="Dans une grotte au Sanctum de Réanimation" style="left : 36.57%; top : 67.63%;"><b>Le Recousu</b><i>36.57, 67.63</i><time></div>
-    <div class="boss" data-desc="A Alur'thar : la Porte de la Désolation" style="left : 49.58%; top : 32.24%;"><b>Reine de sang Lana'thel</b><i>49.58, 32.24</i><time></div>
-    <div class="boss" data-desc="A Alur'thar : la Porte de la Désolation" style="left : 57.30%; top : 30.36%;"><b>Professeur Putricide</b><i>57.30, 30.36</i><time></div>
-    <div class="boss" data-desc="A Ymirheim" style="left : 57.65%; top : 55.97%;"><b>Skadi le Brutal</b><i>57.67, 55.97</i><time></div>
-    <div class="boss" data-desc="A Ymirheim" style="left : 52.32%; top : 52.53%;"><b>Ingvar le Pilleur</b><i>52.32, 52.53</i><time></div>
-    <div class="boss" data-desc="Au Glacier de la Couronne de glace" style="left : 44.35%; top : 49.13%;"><b>Ancien Nadox</b><i>44.35, 19.13</i><time></div>
-    <div class="boss" data-desc="A Alur'thar : la Porte de la Désolation" style="left : 53.93%; top : 44.62%;"><b>Prince Keleseth</b><i>53.93, 44.62</i><time></div>
-    <div class="boss" data-desc="Au Guet du Nécrorateur" style="left : 64.80%; top : 22.09%;"><b>Le Chevalier noir</b><i>64.80, 22.09</i><time></div>
-    <div class="boss" data-desc="A la Chute de Sindragosa" style="left : 70.54%; top : 38.56%;"><b>Bronjahm</b><i>70.54, 38.56</i><time></div>
-    <div class="boss" data-desc="A Corp'rethar : la Porte de l'Horreur" style="left : 46.88%; top : 65.39%;"><b>Seigneur du Fléau Tyrannus</b><i>46.88, 65.39</i><time></div>
-    <div class="boss" data-desc="A Malykriss : le Fort infâme" style="left : 59.09%; top : 72.33%;"><b>Maître-forge Gargivre</b><i>59.09, 72.33</i><time></div>
-    <div class="boss" data-desc="A la Citadelle de la Couronne de glace" style="left : 58.18%; top : 83.52%;"><b>Marwyn</b><i>58.18, 83.52</i><time></div>
-    <div class="boss" data-desc="A la Citadelle de la Couronne de glace" style="left : 51.16%; top : 74.48%;"><b>Dame Murmemort</b><i>51.16, 74.48</i><time></div>
-    <div class="boss" data-desc="Au sud de la Charognerie" style="left : 31.6%; top : 70.5%;"><b>Noth le Porte-peste</b><i>31.6, 70.5</i><time></div>
+    <div class="boss" style="left:50.22%;top:88.00%"><a target="_blank" href="https://fr.wowhead.com/npc=174054">Falric</a><i>50.22, 88.00</i><time></div>
+    <div class="boss" style="left:79.86%;top:60.93%"><a target="_blank" href="https://fr.wowhead.com/npc=174053">Prophète Tharon'ja</a><i>79.86, 60.93</i><time></div>
+    <div class="boss" style="left:77.89%;top:65.92%"><a target="_blank" href="https://fr.wowhead.com/npc=174052">Novos l'Invocateur</a><i>77.89, 65.92</i><time></div>
+    <div class="boss" style="left:58.53%;top:39.46%"><a target="_blank" href="https://fr.wowhead.com/npc=174051">Trollétripe</a><i>58.53, 39.46</i><time></div>
+    <div class="boss" style="left:67.48%;top:58.09%"><a target="_blank" href="https://fr.wowhead.com/npc=174050">Krik'thir le Gardien de la porte</a><i>67.48, 58.09</i><time></div>
+    <div class="boss" style="left:29.57%;top:62.26%"><a target="_blank" href="https://fr.wowhead.com/npc=174049">Prince Taldaram</a><i>29.57, 62.26</i><time></div>
+    <div class="boss" style="left:36.57%;top:67.63%"><a target="_blank" href="https://fr.wowhead.com/npc=174066">Le Recousu</a><i>36.57, 67.63</i><time></div>
+    <div class="boss" style="left:49.58%;top:32.24%"><a target="_blank" href="https://fr.wowhead.com/npc=174065">Reine de sang Lana'thel</a><i>49.58, 32.24</i><time></div>
+    <div class="boss" style="left:57.30%;top:30.36%"><a target="_blank" href="https://fr.wowhead.com/npc=174064">Professeur Putricide</a><i>57.30, 30.36</i><time></div>
+    <div class="boss" style="left:57.65%;top:55.97%"><a target="_blank" href="https://fr.wowhead.com/npc=174062">Skadi le Brutal</a><i>57.67, 55.97</i><time></div>
+    <div class="boss" style="left:52.32%;top:52.53%"><a target="_blank" href="https://fr.wowhead.com/npc=174061">Ingvar le Pilleur</a><i>52.32, 52.53</i><time></div>
+    <div class="boss" style="left:44.35%;top:49.13%"><a target="_blank" href="https://fr.wowhead.com/npc=174048">Ancien Nadox</a><i>44.35, 19.13</i><time></div>
+    <div class="boss" style="left:53.93%;top:44.62%"><a target="_blank" href="https://fr.wowhead.com/npc=174060">Prince Keleseth</a><i>53.93, 44.62</i><time></div>
+    <div class="boss" style="left:64.80%;top:22.09%"><a target="_blank" href="https://fr.wowhead.com/npc=174059">Le Chevalier noir</a><i>64.80, 22.09</i><time></div>
+    <div class="boss" style="left:70.54%;top:38.56%"><a target="_blank" href="https://fr.wowhead.com/npc=174058">Bronjahm</a><i>70.54, 38.56</i><time></div>
+    <div class="boss" style="left:46.88%;top:65.39%"><a target="_blank" href="https://fr.wowhead.com/npc=174057">Seigneur du Fléau Tyrannus</a><i>46.88, 65.39</i><time></div>
+    <div class="boss" style="left:59.09%;top:72.33%"><a target="_blank" href="https://fr.wowhead.com/npc=174056">Maître-forge Gargivre</a><i>59.09, 72.33</i><time></div>
+    <div class="boss" style="left:58.18%;top:83.52%"><a target="_blank" href="https://fr.wowhead.com/npc=174055">Marwyn</a><i>58.18, 83.52</i><time></div>
+    <div class="boss" style="left:51.16%;top:74.48%"><a target="_blank" href="https://fr.wowhead.com/npc=174063">Dame Murmemort</a><i>51.16, 74.48</i><time></div>
+    <div class="boss" style="left:31.60%;top:70.50%"><a target="_blank" href="https://fr.wowhead.com/npc=174067">Noth le Porte-peste</a><i>31.6, 70.5</i><time></div>
   </div>
 </body>
 <script>
