--- a/index.html
+++ b/index.html
@@ -137,34 +137,34 @@ a, .boss { font-family: sans-serif }
 </head>
 <body>
   <div id="map">
-    <div class="boss" style="left:50.22%;top:88.00%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174054">Falric</a><i>50.22, 88.00</i></div>
-    <div class="boss" style="left:79.86%;top:60.93%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174053">Prophète Tharon'ja</a><i>79.86, 60.93</i></div>
-    <div class="boss" style="left:77.89%;top:65.92%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174052">Novos l'Invocateur</a><i>77.89, 65.92</i></div>
-    <div class="boss" style="left:58.53%;top:39.46%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174051">Trollétripe</a><i>58.53, 39.46</i></div>
-    <div class="boss" style="left:67.48%;top:58.09%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174050">Krik'thir le Gardien de la porte</a><i>67.48, 58.09</i></div>
-    <div class="boss" style="left:29.57%;top:62.26%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174049">Prince Taldaram</a><i>29.57, 62.26</i></div>
-    <div class="boss" style="left:36.57%;top:67.63%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174066">Le Recousu</a><i>36.57, 67.63</i></div>
-    <div class="boss" style="left:49.58%;top:32.24%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174065">Reine de sang Lana'thel</a><i>49.58, 32.24</i></div>
-    <div class="boss" style="left:57.30%;top:30.36%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174064">Professeur Putricide</a><i>57.30, 30.36</i></div>
-    <div class="boss" style="left:57.65%;top:55.97%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174062">Skadi le Brutal</a><i>57.67, 55.97</i></div>
-    <div class="boss" style="left:52.32%;top:52.53%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174061">Ingvar le Pilleur</a><i>52.32, 52.53</i></div>
-    <div class="boss" style="left:44.35%;top:49.13%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174048">Ancien Nadox</a><i>44.35, 19.13</i></div>
-    <div class="boss" style="left:53.93%;top:44.62%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174060">Prince Keleseth</a><i>53.93, 44.62</i></div>
-    <div class="boss" style="left:64.80%;top:22.09%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174059">Le Chevalier noir</a><i>64.80, 22.09</i></div>
-    <div class="boss" style="left:70.54%;top:38.56%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174058">Bronjahm</a><i>70.54, 38.56</i></div>
-    <div class="boss" style="left:46.88%;top:65.39%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174057">Seigneur du Fléau Tyrannus</a><i>46.88, 65.39</i></div>
-    <div class="boss" style="left:59.09%;top:72.33%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174056">Maître-forge Gargivre</a><i>59.09, 72.33</i></div>
-    <div class="boss" style="left:58.18%;top:83.52%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174055">Marwyn</a><i>58.18, 83.52</i></div>
-    <div class="boss" style="left:51.16%;top:74.48%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174063">Dame Murmemort</a><i>51.16, 74.48</i></div>
-    <div class="boss" style="left:31.60%;top:70.50%"><time>0</time><a target="_blank" href="https://en.wowhead.com/npc=174067">Noth le Porte-peste</a><i>31.6, 70.5</i></div>
+    <div class="boss" style="left:50.22%;top:88.00%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174054">Falric</a><i>50.22, 88.00</i></div>
+    <div class="boss" style="left:79.86%;top:60.93%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174053">Prophète Tharon'ja</a><i>79.86, 60.93</i></div>
+    <div class="boss" style="left:77.89%;top:65.92%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174052">Novos l'Invocateur</a><i>77.89, 65.92</i></div>
+    <div class="boss" style="left:58.53%;top:39.46%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174051">Trollétripe</a><i>58.53, 39.46</i></div>
+    <div class="boss" style="left:67.48%;top:58.09%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174050">Krik'thir le Gardien de la porte</a><i>67.48, 58.09</i></div>
+    <div class="boss" style="left:29.57%;top:62.26%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174049">Prince Taldaram</a><i>29.57, 62.26</i></div>
+    <div class="boss" style="left:36.57%;top:67.63%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174066">Le Recousu</a><i>36.57, 67.63</i></div>
+    <div class="boss" style="left:49.58%;top:32.24%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174065">Reine de sang Lana'thel</a><i>49.58, 32.24</i></div>
+    <div class="boss" style="left:57.30%;top:30.36%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174064">Professeur Putricide</a><i>57.30, 30.36</i></div>
+    <div class="boss" style="left:57.65%;top:55.97%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174062">Skadi le Brutal</a><i>57.67, 55.97</i></div>
+    <div class="boss" style="left:52.32%;top:52.53%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174061">Ingvar le Pilleur</a><i>52.32, 52.53</i></div>
+    <div class="boss" style="left:44.35%;top:49.13%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174048">Ancien Nadox</a><i>44.35, 19.13</i></div>
+    <div class="boss" style="left:53.93%;top:44.62%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174060">Prince Keleseth</a><i>53.93, 44.62</i></div>
+    <div class="boss" style="left:64.80%;top:22.09%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174059">Le Chevalier noir</a><i>64.80, 22.09</i></div>
+    <div class="boss" style="left:70.54%;top:38.56%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174058">Bronjahm</a><i>70.54, 38.56</i></div>
+    <div class="boss" style="left:46.88%;top:65.39%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174057">Seigneur du Fléau Tyrannus</a><i>46.88, 65.39</i></div>
+    <div class="boss" style="left:59.09%;top:72.33%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174056">Maître-forge Gargivre</a><i>59.09, 72.33</i></div>
+    <div class="boss" style="left:58.18%;top:83.52%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174055">Marwyn</a><i>58.18, 83.52</i></div>
+    <div class="boss" style="left:51.16%;top:74.48%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174063">Dame Murmemort</a><i>51.16, 74.48</i></div>
+    <div class="boss" style="left:31.60%;top:70.50%"><time>0</time><a target="_blank" href="https://www.wowhead.com/npc=174067">Noth le Porte-peste</a><i>31.6, 70.5</i></div>
   </div>
 </body>
 <script>
 const whTooltips = {colorLinks: true, iconizeLinks: true, renameLinks: true}
 const locales = ['fr','de','ko','pt','ru','es','cn']
 let [locale] = navigator.language.split('-')
-locales.includes(locale) || (locale = 'en')
-const loots = [["https://en.wowhead.com/npc=174054",[[183664,"Brassards de molaires émoussées",4],[183665,"Espauliers entachés de Valensort",4],[183667,"Découpeur de geist",4]]],["https://en.wowhead.com/npc=174053",[[183684,"Protectorat de Tharon’ja",4],[183685,"Sceau fantasmagorique du prophète",4],[183686,"Braies du serpent squelettique",4]]],["https://en.wowhead.com/npc=174052",[[183627,"Martelet d’invocateur en granit",4],[183671,"Bandelettes nécromantiques",4],[183672,"Thorax de la non-mort",4]]],["https://en.wowhead.com/npc=174051",[[183626,"Éventreur de Troll",4],[183640,"Jambières des charmes interlopes",4],[183669,"Capuche du Troll déchaîné",4]]],["https://en.wowhead.com/npc=174050",[[183681,"Machette tranche-toile",4],[183682,"Cordelière du serviteur",4],[183683,"Habits grouillants",4]]],["https://en.wowhead.com/npc=174049",[[183625,"Collier reforgé de Taldaram",4],[183677,"Ceinture du buveur de sang",4],[183679,"Mules souples de Taldaram",4]]],["https://en.wowhead.com/npc=174066",[[183643,"Déchirure de mortalité",4],[183644,"Protège-épaules de régurgitateur",4],[183645,"Cordelière du torturé",4]]],["https://en.wowhead.com/npc=174065",[[183646,"Corselet de la vitalité siphonnée",4],[183647,"Trace de sang",4],[183648,"Gantelets broyeurs-de-veines",4]]],["https://en.wowhead.com/npc=174064",[[183649,"Sac d’entrailles en vrac",4],[183650,"Minuscule abomination en bouteille",4],[183651,"Pansière des sutures septiques",4]]],["https://en.wowhead.com/npc=174062",[[44151,"Rênes de proto-drake bleu",4],[183656,"Pourpoint de chevaucheur de drake",4],[183657,"Solerets en écailles de Skadi",4],[183670,"Ceinture de Skadi en saronite",4]]],["https://en.wowhead.com/npc=174061",[[183658,"Fendeur de crânes monolithique d’Ingvar",4],[183659,"Bague d’Annhylde",4],[183668,"Ceinture à barbelures acérées en cuir",4]]],["https://en.wowhead.com/npc=174048",[[183624,"Lame de Nadox dentelée",4],[183641,"Protège-épaules de rigidité corporelle",4],[183673,"Anneau-égide nérubien",4]]],["https://en.wowhead.com/npc=174060",[[183661,"Gantelets de drakonnier",4],[183678,"Influenceur de Keleseth",4],[183680,"Cape sanguine royale",4]]],["https://en.wowhead.com/npc=174059",[[183636,"Heaume du violent fracas",4],[183637,"Protège-épaules de la crapule mal famée",4],[183638,"Kriss fantasmagorique",4]]],["https://en.wowhead.com/npc=174058",[[183634,"Sac en parfait état de Papa",4],[183635,"Gantelets de deuil",4],[183639,"Regard de confusion",4],[183675,"Mitaines de sueurs froides",4]]],["https://en.wowhead.com/npc=174057",[[183632,"Protecteur des âmes volées",4],[183633,"Jambières à franges en cuir de wyrm",4],[183674,"Culotte en givre tissé",4]]],["https://en.wowhead.com/npc=174056",[[183630,"Gourdin de deux tonnes de Gargivre",4],[183631,"Anneau de cornaline et de tendon",4],[183666,"Garde-jambes des grands fonds givrés",4]]],["https://en.wowhead.com/npc=174055",[[183662,"Chemise grésillante lige-du-givre",4],[183663,"Coiffe aveugle d’Ulmaas",4],[183687,"Garde-épaules en sutures élimées",4]]],["https://en.wowhead.com/npc=174063",[[183652,"Arc long résonnant de Zod",4],[183653,"Habit de Murmemort",4],[183655,"Manicles de gelée et de grésil",4]]],["https://en.wowhead.com/npc=174067",[[183642,"Robe de souffle rauque",4],[183654,"Croquenots de guerre en os de dragon gravé",4],[183676,"Jonc de grêlon",4]]]]
+locales.includes(locale) || (locale = 'www')
+const loots = [["https://www.wowhead.com/npc=174054",[[183664,"Bracer of Ground Molars"],[183665,"Valonforth's Marred Pauldrons"],[183667,"Geistslicer"]]],["https://www.wowhead.com/npc=174053",[[183684,"Tharon'ja's Protectorate"],[183685,"Phantasmic Seal of the Prophet"],[183686,"Breeches of the Skeletal Serpent"]]],["https://www.wowhead.com/npc=174052",[[183627,"Summoner's Granite Gavel"],[183671,"Necromantic Wristwraps"],[183672,"Cuirass of Undeath"]]],["https://www.wowhead.com/npc=174051",[[183626,"Troll Gorer"],[183640,"Leggings of Disreputable Charms"],[183669,"Cowl of the Rampaging Troll"]]],["https://www.wowhead.com/npc=174050",[[183681,"Webrending Machete"],[183682,"Cinch of the Servant"],[183683,"Skittering Vestments"]]],["https://www.wowhead.com/npc=174049",[[183625,"Reforged Necklace of Taldaram"],[183677,"Blood-Drinker's Belt"],[183679,"Taldaram's Supple Slippers"]]],["https://www.wowhead.com/npc=174066",[[183643,"Severance of Mortality"],[183644,"Regurgitator's Shoulderpads"],[183645,"Cinch of the Tortured"]]],["https://www.wowhead.com/npc=174065",[[183646,"Chestguard of Siphoned Vitality"],[183647,"Bloodspatter"],[183648,"Veincrusher Gauntlets"]]],["https://www.wowhead.com/npc=174064",[[183649,"Bag of Discarded Entrails"],[183650,"Miniscule Abomination in a Jar"],[183651,"Chestplate of Septic Sutures"]]],["https://www.wowhead.com/npc=174062",[[44151,"Reins of the Blue Proto-Drake"],[183656,"Drake Rider's Jerkin"],[183657,"Skadi's Scaled Sollerets"],[183670,"Skadi's Saronite Belt"]]],["https://www.wowhead.com/npc=174061",[[183658,"Ingvar's Monolithic Skullcleaver"],[183659,"Annhylde's Band"],[183668,"Razor-Barbed Leather Belt"]]],["https://www.wowhead.com/npc=174048",[[183624,"Serrated Blade of Nadox"],[183641,"Shoulderpads of Corpal Rigidity"],[183673,"Nerubian Aegis Ring"]]],["https://www.wowhead.com/npc=174060",[[183661,"Drake Stabler's Gauntlets"],[183678,"Keleseth's Influencer"],[183680,"Royal Sanguine Cloak"]]],["https://www.wowhead.com/npc=174059",[[183636,"Helm of the Violent Fracas"],[183637,"Shoulderpads of the Notorious Knave"],[183638,"Phantasmic Kris"]]],["https://www.wowhead.com/npc=174058",[[183634,"Papa's Mint Condition Bag"],[183635,"Grieving Gauntlets"],[183639,"Gaze of Bewilderment"],[183675,"Cold Sweat Mitts"]]],["https://www.wowhead.com/npc=174057",[[183632,"Protector of Stolen Souls"],[183633,"Fringed Wyrmleather Leggings"],[183674,"Rimewoven Pantaloons"]]],["https://www.wowhead.com/npc=174056",[[183630,"Garfrost's Two-Ton Bludgeon"],[183631,"Ring of Carnelian and Sinew"],[183666,"Legguards of the Frosty Fathoms"]]],["https://www.wowhead.com/npc=174055",[[183662,"Frostsworn Rattleshirt"],[183663,"Sightless Capuchin of Ulmaas"],[183687,"Frayed Flesh-Stitched Shoulderguards"]]],["https://www.wowhead.com/npc=174063",[[183652,"Zod's Echoing Longbow"],[183653,"Deathwhisper Vestment"],[183655,"Handgrips of Rime and Sleet"]]],["https://www.wowhead.com/npc=174067",[[183642,"Robes of Rasped Breaths"],[183654,"Etched Dragonbone Stompers"],[183676,"Hailstone Loop"]]]]
 const bossIcon = document.getElementById('fav').href
 const bosses = [...document.getElementsByClassName('boss')]
 bosses.forEach(b => b.style.backgroundImage = `url(${bossIcon})`)
@@ -378,8 +378,8 @@ const rtf = new Intl.RelativeTimeFormat(navigator.language, {
   style: "long",
 })
 
-const relatime = elapsed => {
-  const diff = elapsed - Date.now()
+const relatime = time => {
+  const diff = time - Date.now()
   return Math.abs(diff) < M
     ? rtf.format(Math.round(diff/1000), 'second')
     : rtf.format(Math.round(diff/M), 'minute')
@@ -390,15 +390,17 @@ const S = 1000
 const M = 60*1000
 const H = 60*M
 const now = Date.now()
-const start = Math.floor((now - 1*H) / (24*H)) * (24*H) + 3*M + 30*S
+const start = Math.floor((now + 20*M) / (24*H)) * (24*H) - (1*H) - 17*M + 30*S
 for (const line of rawTimings.split('\n')) {
   if (/>(\d\d)h(\d\d)</.test(line)) {
     const [, h, m] = line.match(/>(\d\d)h(\d\d)</).map(Number)
-    timings.push({ boss, time: start + (h*60+m)*M })
+    const time = start + (h*60+m)*M
+    timings.push({ boss, time, text: relatime(time) })
   } else if (/i>([^<]+)</.test(line)) {
     const name = line.match(/i>([^<]+)</)[1].trim()
     boss = bosses.find(b => b.firstChild.nextSibling.textContent === name)
     boss || console.log({ name, line })
+    boss && (boss.firstChild.nextSibling.href = boss.firstChild.nextSibling.href.replace('https://www', `https://${locale}`))
   }
 }
 
@@ -423,10 +425,9 @@ update()
 
 loots.forEach(([url, items]) => {
   const lootsElement = document.createElement('div')
-  for (const [id, name, quality] of items) {
+  for (const [id, name] of items) {
     const a = document.createElement('a')
     a.href = `https://${locale}.wowhead.com/item=${id}`
-    a.className = `q${quality}`
     a.textContent = name
     lootsElement.appendChild(a)
   }
